libgphoto2 2.5.18.1 development branch

ptp2:
* Canon EOS: handle OLC versions of newer models
* Fuji X series capture improvements
* Fuji X series live view support added
* Panasonic GH5 liveview and capture support. (Needs camera firmware 2.3+)

------------------------------------------------------------------------------
libgphoto2 2.5.18 release

ptp2:
* Canon EOS: Fixed file download on several EOS brands, broken by 2.5.17 release.

pentax:
* Added K01 and K70 models.

------------------------------------------------------------------------------
libgphoto2 2.5.17 release

ptp2:
* Apple iOSX: handle root directory objects that have ParentObject==StorageID instead of 0
* implement PTP 1.1 Manifest reading and hook into filesystem. currently only supported
  by Apple iOS.
* Canon PowerShot CHDK live view support.
* Canon EOS: prepare capture needs to wait a bit on a crucial place to get all events.
  might fix some PTP Device Busy reports.
* Canon EOS: split bulk downloads into pieces of partial downloads. This might cure the Error 70.
* Canon EOS: Improved EOS M capture
* Canon CHDK: live preview capture support added
* Added USB IDs:
  * Sony A7r III
  * Nikon CoolPix L430
  * Nikon D850
  * Canon EOS M2, M6, M100
  * Canon EOS 6D Mark II
  * Fuji Film X-Pro 2

pentax:
* Code updates imported from pkremote

libgphoto2:
* Report file changes via GP_EVENT_FILE_CHANGED (hooked up for Canon EOS currently)

translations:
* updates spanish, chinese

------------------------------------------------------------------------------
libgphoto2 2.5.16 release

ptp2:
* A hardening fix broke the string unpacking for 0 length strings which broke Canon EOS

------------------------------------------------------------------------------
libgphoto2 2.5.15 release

ptp2:
* fuji: Fix cameras without new capture properties.
* Canon EOS: config aspectratio, highisonr
* Canon EOS: emit CAPTURECOMPLETE event
* Canon EOS: whitebalanaceadjustment is 32bit signed, not 16bit signed